# Kiwi

./: Cargo.toml  Readme.md
src/: .config.toml.swp  .index.html.swp  .main.rs.swp  config.toml  error.html  index.html  index.php  index.png~  main.rs  notimplementet.html  style.css
src/file/: index.html
