[package]
name = "Kiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  "4"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1"
futures = "0.3"
actix-files = "0.6.1"
mime = "0.3.16"
bytes = "1.2.0"
image = "0.24.3"
